# tvw_scraper

./: LICENSE  README.md  example.py  pyproject.toml  scraper.py  setup.py  test.py  test_2.py
src/: __init__.py  models.py  rest.py  schemas.py  scraper.py
tvw_scraper/: rest.py  schemas.py  scraper.py
