[tool.poetry]
name = "tw_scraper"
version = "0.1.0"
description = ""
authors = ["fip"]

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2022.1.18"
websockets = "^10.2"
tenacity = "^8.0.1"
websocket-client = "^1.2.3"
dataclass-factory = "^2.14"
inflection = "^0.5.1"
aiohttp = "^3.8.1"
uplink = "^0.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
